Bug 424677 nsImapProtocol.cpp leaks nsVoidArray (4 bytes) due to static declaration. r/sr=Neil